<resources>
    <string name="app_name">PracticalTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="dummyLabel">Neque porro quis quam est</string>
    <string name="sell">Sell</string>
    <string name="available_to_buy">Available To Buy</string>
    <string name="see_all">See all</string>
    <string name="my_dashboard">My Dashboard</string>
</resources>